# auth-service

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/actions/setup-uv-env/: action.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 8414523ec327_default_values.py  d7f5e2ce86b2_init.py
app/: bootstrap.py  constants.py  logger.py  main.py  settings.py
app/api/: exceptions.py
app/api/dependencies/: auth.py  service.py
app/api/v1/routers/: auth.py  me.py  permission.py  user.py
app/api/v1/schemas/: base.py
app/api/v1/schemas/queries/: permission.py  role.py  token.py  user.py
app/api/v1/schemas/requests/: mfa.py  role.py  token.py  user.py
app/api/v1/schemas/responses/: mfa.py  permission.py  role.py  token.py  user.py
app/clients/: redis_client.py  smtp_client.py
app/containers/: auth.py  base.py  enums.py  mfa.py  user.py
app/db/: session.py
app/db/models/: __init__.py  associations.py  challenge.py  permission.py  role.py  token.py  user.py  user_mfa.py
app/exceptions/: auth.py  base.py  challenge.py  mfa.py  token.py  user.py
app/middlewares/: error_handling.py  logging.py  request_validation.py  security_headers.py
app/notification/: email_notification.py
app/repository/: base.py  challenge.py  permission.py  role.py  role_permission.py  token.py  user.py
app/repository/mfa/: user_mfa.py
app/security/: hasher.py  stateful_token.py
app/security/password/: encryption.py
app/service/: auth_service.py  challenge_service.py  permission_service.py  role_service.py  token_service.py  user_service.py
app/service/mfa/: methods.py  service.py
app/templates/email/: reset_password.html
scripts/: prepare-db.sh
tests/e2e/: conftest.py  test_auth.py
tests/integration/: conftest.py
tests/integration/middlewares/: test_error_handling.py  test_request_validation.py  test_security_headers.py
tests/unit/: conftest.py
tests/unit/security/: test_encryption.py  test_hasher.py  test_stateful_token_codec.py
tests/unit/service/: test_token_service.py  test_user_service.py
